Change carousel name to slider

--- a/css/default.css
+++ b/css/default.css
@@ -51,7 +51,7 @@ main {
 
 /* Testimonials */
 
-.carousel {
+.slider {
 	display: flex;
 	align-items: center;
 	height: 100vh;
@@ -207,7 +207,7 @@ main {
 
 	/* Testimonials */
 
-	.carousel {
+	.slider {
 		margin-left: 2rem;
 		margin-right: 2rem;
 	}
